Create DOM structure, begin layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <rel link="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="img-block">
+        <img id="background" src="images/landscape.jpg" alt="martian-landscape">
+        <div id="banner">
+            <h1>Whereas</h1>
+        </div>
+    </div>
+
+    <div id="info-block">
+        <div id="text-bar">
+            <p>This is a test, remain calm</p>
+        </div>
+
+        <div id="form-bar">
+            <p>Let's do this</p>
+            <form action="example.com.path" method="post">
+                <label for="name">First Name</label>
+                <input type="tet" id="name">
+            </form>
+        </div>
+
+        <div id="button-bar">
+            <button type="submit">Create Account</button>
+            <p>Already have an account?<a>Log in</a></p>
+        </div>
+    </div>
     
 </body>
 </html>
