Work on background positioning

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="img-block">
-        <img id="background" src="images/landscape.jpg" alt="martian-landscape">
+        <div id="background"></div>    
         <div id="banner">
             <h1>Whereas</h1>
         </div>
