--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="img-block">
         <div id="background"></div>    
         <div id="banner">
-            <h1>Whereas</h1>
+            <img src="images/rocket.png" alt="a rocket" id="logo">
+            <h1>Ares</h1>
         </div>
     </div>
 
