work with layout

--- a/index.html
+++ b/index.html
@@ -20,14 +20,30 @@
 
     <div id="info-block">
         <div id="text-bar">
-            <p>This is a test, remain calm</p>
+            <h3>Have you considered joining the Ares Project? One way missions to Mars launching weekly. Leave your mark on history! Leave your mark on Mars </h3>
+            <h3>Sign up now! Live forever in the stars...</h3>
         </div>
 
         <div id="form-bar">
             <p>Let's do this</p>
             <form action="example.com.path" method="post">
-                <label for="name">First Name</label>
-                <input type="tet" id="name">
+                <fieldset>
+                    <label for="name">First Name</label>
+                    <input type="text" id="name">
+                    <label for="mail">Email</label>
+                    <input type="email" id="mail">
+                    <label for="pass">Password</label>
+                    <input type="password" id="pass">
+                </fieldset>
+                <fieldset>
+                    <label for="last">Last Name</label>
+                    <input type="text" id="last">
+                    <label for="phone">Phone number</label>
+                    <input type="number" id="phone">
+                    <label for="confirm">Confirm password</label>
+                    <input type="password" id="confirm"> 
+                </fieldset>        
+
             </form>
         </div>
 
